# terralchemy

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/natural_earth/: terralchemy_project.yml
examples/natural_earth/models/: country_city_density.sql  large_countries.sql  major_cities.sql
examples/natural_earth/sources/: natural_earth.yml
examples/natural_earth/tests/: spatial_tests.yml
src/terralchemy/: __init__.py  cli.py  dag.py  engine.py  models.py  project.py  sources.py  testing.py
src/terralchemy/templates/: terralchemy_project.yml
src/terralchemy/templates/data/: example.geojson
src/terralchemy/templates/models/: example.sql
src/terralchemy/templates/sources/: example.yml
src/terralchemy/templates/tests/: example.yml
src/terralchemy/web/: __init__.py  app.py  index.html
